; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_rme96.c_rme96_set_buffer_size_constraint.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_rme96.c_rme96_set_buffer_size_constraint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rme96 = type { i32, i32 }
%struct.snd_pcm_runtime = type { i32 }

@SNDRV_PCM_HW_PARAM_BUFFER_BYTES = common dso_local global i32 0, align 4
@RME96_BUFFER_SIZE = common dso_local global i32 0, align 4
@SNDRV_PCM_HW_PARAM_PERIOD_BYTES = common dso_local global i32 0, align 4
@hw_constraints_period_bytes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rme96*, %struct.snd_pcm_runtime*)* @rme96_set_buffer_size_constraint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rme96_set_buffer_size_constraint(%struct.rme96* %0, %struct.snd_pcm_runtime* %1) #0 {
  %3 = alloca %struct.rme96*, align 8
  %4 = alloca %struct.snd_pcm_runtime*, align 8
  %5 = alloca i32, align 4
  store %struct.rme96* %0, %struct.rme96** %3, align 8
  store %struct.snd_pcm_runtime* %1, %struct.snd_pcm_runtime** %4, align 8
  %6 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %4, align 8
  %7 = load i32, i32* @SNDRV_PCM_HW_PARAM_BUFFER_BYTES, align 4
  %8 = load i32, i32* @RME96_BUFFER_SIZE, align 4
  %9 = load i32, i32* @RME96_BUFFER_SIZE, align 4
  %10 = call i32 @snd_pcm_hw_constraint_minmax(%struct.snd_pcm_runtime* %6, i32 %7, i32 %8, i32 %9)
  %11 = load %struct.rme96*, %struct.rme96** %3, align 8
  %12 = getelementptr inbounds %struct.rme96, %struct.rme96* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %20, label %15

15:                                               ; preds = %2
  %16 = load %struct.rme96*, %struct.rme96** %3, align 8
  %17 = getelementptr inbounds %struct.rme96, %struct.rme96* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %5, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %15, %2
  %21 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %4, align 8
  %22 = load i32, i32* @SNDRV_PCM_HW_PARAM_PERIOD_BYTES, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @snd_pcm_hw_constraint_minmax(%struct.snd_pcm_runtime* %21, i32 %22, i32 %23, i32 %24)
  br label %30

26:                                               ; preds = %15
  %27 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %4, align 8
  %28 = load i32, i32* @SNDRV_PCM_HW_PARAM_PERIOD_BYTES, align 4
  %29 = call i32 @snd_pcm_hw_constraint_list(%struct.snd_pcm_runtime* %27, i32 0, i32 %28, i32* @hw_constraints_period_bytes)
  br label %30

30:                                               ; preds = %26, %20
  ret void
}

declare dso_local i32 @snd_pcm_hw_constraint_minmax(%struct.snd_pcm_runtime*, i32, i32, i32) #1

declare dso_local i32 @snd_pcm_hw_constraint_list(%struct.snd_pcm_runtime*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
